--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
     "@tanstack/react-query": "^5.64.0",
     "@types/react-helmet": "^6.1.11",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
+    "emoji-mart": "^5.6.0",
     "ethers": "^6.13.5",
+    "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "stream-chat": "^8.49.0",
+    "stream-chat-react": "^12.8.2",
     "viem": "^2.22.7",
-    "wagmi": "^2.14.7"
+    "wagmi": "^2.14.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
