--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
+    "@privy-io/react-auth": "^2.0.1",
     "@tanstack/react-query": "^5.64.0",
     "@types/react-helmet": "^6.1.11",
     "axios": "^1.7.9",
