--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "ethers": "^6.13.5",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
