--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 VITE_GETSTREAM_JWT=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoianAifQ.ECluHEzlzMzge3Eh5tC7xbL02LIIuSGxJ8tRBz4LPlU
 VITE_GETSTREAM_API_KEY=zh6fk4ry5ncd
 VITE_GETSTREAM_USER_ID=jp
+
+VITE_LIVEPEER_API_KEY=c7140042-f15b-4225-864f-5526cccd4ccc
