--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emoji-mart/react": "^1.1.1",
     "@farcaster/auth-kit": "^0.6.0",
     "@farcaster/frame-sdk": "^0.0.26",
+    "@hello-pangea/dnd": "^17.0.0",
+    "@livepeer/react": "^4.2.9",
     "@privy-io/react-auth": "^2.0.1",
     "@tanstack/react-query": "^5.64.0",
     "@types/react-helmet": "^6.1.11",
@@ -21,7 +23,9 @@
     "buffer": "^6.0.3",
     "emoji-mart": "^5.6.0",
     "ethers": "^6.13.5",
+    "livepeer": "^3.5.0",
     "lucide-react": "^0.471.1",
+    "pinata-web3": "^0.5.4",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
@@ -29,10 +33,13 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-player": "^2.16.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "sonner": "^1.7.2",
     "stream-chat": "^8.49.0",
     "stream-chat-react": "^12.8.2",
+    "tailwind-merge": "^2.6.0",
     "viem": "^2.22.7",
     "wagmi": "^2.14.7",
     "zustand": "^5.0.3"
@@ -40,6 +47,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
